<resources>
    <string name="app_name">VpdAssesment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="loading">Loading</string>
    <string name="login_into_your_account">Login into your Account</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="account_no_template">Account No: %s</string>
    <string name="recent_transactions">Recent Transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_destination_account">Select Destination Account</string>
    <string name="account_number">Account Number</string>
    <string name="amount">Enter Amount</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_source_account">Select Source Account</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="continuee">Continue</string>
    <string name="transfer">Transfer</string>
    <string name="send_money">Send Money</string>
    <string name="source_account">Source Account : %s</string>
    <string name="destination_bank">Destination Bank: %s</string>
    <string name="destination_account">Destination Account: %s</string>
    <string name="amount_template">Amount: %s</string>
    <string name="no_recent_transactions">No Recent Transactions</string>
</resources>