<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.transfer.TransferFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            app:title="Make Transfer"
            android:background="@color/white"

            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="wrap_content">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:paddingHorizontal="15dp"
       android:layout_marginTop="20dp"
       android:layout_height="wrap_content">



       <include android:id="@+id/card" layout="@layout/account_card_item"/>

       <com.skydoves.powerspinner.PowerSpinnerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rounded_shape"
           android:gravity="center_vertical"
           android:layout_marginTop="20dp"
           android:hint="@string/select_source_account"
           android:paddingHorizontal="15dp"
           android:paddingVertical="13dp"
           android:id="@+id/select_source"
          android:textSize="14sp"
           app:spinner_popup_background="@color/white"
           app:spinner_arrow_gravity="end"
           app:spinner_arrow_padding="8dp"
           app:spinner_divider_show="true"
           app:spinner_divider_size="0.4dp"
           app:spinner_item_height="46dp"
           app:spinner_popup_animation="dropdown"
           app:spinner_popup_elevation="14dp" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/parent_account_number"
           style="@style/filledTextfield"
           android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           app:helperText=""
           android:layout_height="wrap_content"
           app:endIconMode="clear_text"
           app:hintEnabled="false">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/account_number_edittext"
               android:layout_width="match_parent"
               android:inputType="number"
               android:layout_height="wrap_content"
               android:hint="@string/account_number" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.skydoves.powerspinner.PowerSpinnerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:spinner_popup_max_height="500dp"
           android:background="@drawable/rounded_shape"
           android:gravity="center_vertical"
           app:spinner_popup_background="@color/white"
           android:layout_marginTop="20dp"
           android:hint="@string/select_bank"
           android:paddingHorizontal="15dp"
           android:paddingVertical="15dp"
           android:id="@+id/banks_spinner"
           app:spinner_arrow_tint="@color/black"
           android:scrollbarAlwaysDrawVerticalTrack="true"
           android:scrollbars="vertical"
           android:textSize="14sp"
           app:spinner_arrow_gravity="end"
           app:spinner_arrow_padding="8dp"
           app:spinner_divider_show="true"
           app:spinner_divider_size="0.4dp"
           app:spinner_item_height="46dp"
           app:spinner_popup_animation="dropdown"
            app:spinner_popup_elevation="14dp" />

       <TextView
           android:layout_width="match_parent"
           android:id="@+id/user_name"
           android:text="Simon Tule Joseph"
           android:textSize="16sp"
           android:layout_marginTop="5dp"
           android:textStyle="bold"
           android:drawablePadding="10dp"
           android:layout_height="wrap_content"
           app:drawableStartCompat="@drawable/baseline_check_circle_24"
           app:drawableTint="@color/green" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/parent_amount"
           style="@style/filledTextfield"
           android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:endIconMode="clear_text"
           app:hintEnabled="false">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/amount_edittext"
               android:layout_width="match_parent"
               android:inputType="number"
               android:layout_height="wrap_content"
               android:hint="@string/amount" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/parent_desc"
           style="@style/filledTextfield"
           android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:endIconMode="clear_text"
           app:hintEnabled="false">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/desc_edittext"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_a_description" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:layout_width="match_parent"
           android:text="@string/continuee"
           android:id="@+id/submit"
           android:backgroundTint="@color/purple_200"
           android:layout_marginTop="45dp"
           app:cornerRadius="15dp"
           android:padding="12dp"
           android:textColor="@color/white"
           android:layout_height="wrap_content"/>


   </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>